--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         margin-left: -74px;
     }
     .copyright a{
-        color: #ea7373;
+        color: #51e85e;
     }
     ol a.mult-link, ol a.socket-link{
         margin: 0 15px;
@@ -94,10 +94,10 @@
 </head>
 <body>
     <ol>
-        <li> <a class="star" href="/disaster.htm" target="_blank">灾备</a><a href="/disaster.htm?_multiscreen=1" target="_blank" title="多窗口打开" class="mult-link">多窗口</a><a href="/disaster.htm?controller=socket" target="_blank" title="用socket远程控制" class="socket-link">2017-05-30</a></li>
-	<li><a class="star" href="/new_retail.htm" target="_blank">新零售</a><a href="/new_retail.htm?_multiscreen=1" target="_blank" title="多窗口打开" class="mult-link">多窗口</a><a href="/new_retail.htm?controller=socket" target="_blank" title="用socket远程控制" class="socket-link">2017-05-16</a></li>
+        <li> <a href="/disaster.htm?controller=socket" target="_blank" title="用socket远程控制" class="socket-link">2017-05-30</a> <a href="/disaster.htm?_multiscreen=1" target="_blank" title="多窗口打开" class="mult-link">homework</a><a class="star" href="/disaster.htm" target="_blank">灾备</a></li>
+	<li> <a href="/new_retail.htm?controller=socket" target="_blank" title="用socket远程控制" class="socket-link">2017-05-16</a> <a href="/new_retail.htm?_multiscreen=1" target="_blank" title="多窗口打开" class="mult-link">homework</a><a class="star" href="/new_retail.htm" target="_blank">新零售</a></li>
     </ol>
-    <h4 class="copyright">Powered by <a title="使用NodePPT" href="https://github.com/ksky521/nodePPT" target="_blank">NodePPT 1.4.2</a></h4>
+    <h4 class="copyright">Powered by <a title="my CV" href="http://cv.soft.dog" target="_blank">小麦草</a></h4>
 </body>
 </html>
 
